# wildfire-simulation

./: .gitignore  README.md
unity-wildfire-port/Include/dr_bo_starter_code/: Common.h  OpenGLBufferObjects.h  OpenGLCommon.h  OpenGLMarkerObjects.h  OpenGLMesh.h  OpenGLObject.h  OpenGLShaderProgram.h  OpenGLTexture.h  OpenGLWindow.h
unity-wildfire-port/Include/glad/: glad.h
unity-wildfire-port/Include/glm/: CMakeLists.txt
unity-wildfire-port/Include/glm/gtx/: component_wise.hpp  norm.hpp  quaternion.hpp
unity-wildfire-port/Include/learnopengl/: shader_t.h
unity-wildfire-port/Libs/: glfw3.lib
unity-wildfire-port/unity-wildfire-port/: unity-wildfire-port.sln
unity-wildfire-port/unity-wildfire-port/unity-wildfire-port/: ApplyAdvection.cs  FireFluidSim.cpp  FireFluidSim.h  FireSimulation.cpp  FireSimulation.h  Mesh.h  Model.h  Utilities.h  WildFireSimulation.cpp  WildFireSimulation.h  applyAdvection.cs  applyBuoyancy.cs  applyImpulse.cs  common.glsl  computeConfinement.cs  computeDivergence.cs  computeJacobi.cs  computeObstacles.cs  computeProjection.cs  computeShader.cs  computeVorticity.cs  glad.c  gpuheight.fs  gpuheight.tcs  gpuheight.tes  gpuheight.vs  heightmapReader.fs  heightmapReader.vs  imgui.ini  main.cpp  model_loading.vs  screenQuad.fs  screenQuad.vs  tree_fragment.fs  tree_vertex.vs  unity-wildfire-port.vcxproj  unity-wildfire-port.vcxproj.filters  wildfireCompute.cs  wildfireSim.fs
unity-wildfire-port/unity-wildfire-port/unity-wildfire-port/Meshes/: Tree.mtl  tree2.mtl
unity-wildfire-port/unity-wildfire-port/unity-wildfire-port/Shaders/: terrainMesh.frag  wildfireCompute.cs
unity-wildfire-port/unity-wildfire-port/unity-wildfire-port/x64/Debug/: unity-wildfire-port.exe.recipe  unity-wildfire-port.ilk  vc143.idb
unity-wildfire-port/unity-wildfire-port/unity-wildfire-port/x64/Debug/unity-wi.39aeed55.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  unity-wildfire-port.lastbuildstate
